--- a/.github/workflows/code-style.yml
+++ b/.github/workflows/code-style.yml
@@ -11,7 +11,7 @@ jobs:
             matrix:
                 php: [ 8.2 ]
 
-        name: PHP ${{ matrix.php }}
+        name: CS PHP ${{ matrix.php }}
 
         steps:
             -   name: Checkout code
