--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "A calculator for public holidays written in PHP",
     "type": "library",
     "license": "GPL-3.0-or-later",
+    "homepage": "https://portavice.de",
     "autoload": {
         "psr-4": {
             "Portavice\\PublicHolidays\\": "src/"
@@ -33,7 +34,7 @@
     "require-dev": {
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7.2",
         "phpcompatibility/php-compatibility": "^9.3.5",
-        "phpunit/phpunit": "^10.0.18",
+        "phpunit/phpunit": "^10.2.2",
         "squizlabs/php_codesniffer": "^3.7.2"
     },
     "scripts": {
@@ -42,6 +43,9 @@
         ],
         "csfix": [
             "phpcbf"
+        ],
+        "test": [
+            "phpunit"
         ]
     }
 }
