--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     "require": {
         "php": "^8.1",
         "ext-calendar": "*",
-        "nesbot/carbon": "^2.66.0"
+        "nesbot/carbon": "^2.66.0|^3.8.6"
     },
     "require-dev": {
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7.2",
