--- a/.editorconfig
+++ b/.editorconfig
@@ -8,5 +8,11 @@ indent_style = space
 indent_size = 4
 trim_trailing_whitespace = true
 
+[*.json]
+insert_final_newline = false
+
 [*.md]
 trim_trailing_whitespace = false
+
+[*.{yml,yaml}]
+indent_size = 2
