--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,28 +3,31 @@ name: Run tests
 on: [ push ]
 
 jobs:
-    quality:
-        runs-on: ${{ matrix.os }}
+  quality:
+    runs-on: ubuntu-latest
 
-        strategy:
-            fail-fast: false
-            matrix:
-                os: [ ubuntu-latest ]
-                php: [ 8.4, 8.3, 8.2, 8.1 ]
+    strategy:
+      fail-fast: false
+      matrix:
+        php: [ 8.4, 8.3, 8.2, 8.1 ]
+        carbon: [ ^2.66.0, ^3.8.6 ]
+        dependency-version: [ prefer-lowest, prefer-stable ]
 
-        name: Tests ${{ matrix.os }} - PHP ${{ matrix.php }}
+    name: Tests PHP ${{ matrix.php }} - Carbon ${{ matrix.carbon }} - ${{ matrix.dependency-version }}
 
-        steps:
-            -   name: Checkout code
-                uses: actions/checkout@v3
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-            -   name: Setup PHP
-                uses: shivammathur/setup-php@v2
-                with:
-                    php-version: ${{ matrix.php }}
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php }}
 
-            -   name: Install
-                run: composer install --no-interaction
+      - name: Install
+        run: |
+          composer require "nesbot/carbon:${{ matrix.carbon }}" --no-interaction --no-update
+          composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction
 
-            -   name: Execute tests
-                run: vendor/bin/phpunit
+      - name: Execute tests
+        run: composer test
