--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [ 8.5, 8.4, 8.3, 8.2, 8.1 ]
+        php: [ 8.5, 8.4, 8.3, 8.2 ]
         carbon: [ ^2.66.0, ^3.8.6 ]
         dependency-version: [ prefer-lowest, prefer-stable ]
 
