--- a/composer.json
+++ b/composer.json
@@ -21,28 +21,21 @@
             "role": "Developer"
         }
     ],
-    "config": {
-        "allow-plugins": {
-            "dealerdirect/phpcodesniffer-composer-installer": true
-        }
-    },
     "require": {
-        "php": "^8.1",
+        "php": "^8.2",
         "ext-calendar": "*",
         "nesbot/carbon": "^2.66.0|^3.8.6"
     },
     "require-dev": {
-        "dealerdirect/phpcodesniffer-composer-installer": "^1.0",
-        "phpcompatibility/php-compatibility": "^9.3",
-        "phpunit/phpunit": "^10.5",
-        "squizlabs/php_codesniffer": "^3.12"
+        "phpunit/phpunit": "^11.5",
+        "portavice/laravel-pint-config": "^3.0"
     },
     "scripts": {
         "cs": [
-            "phpcs"
+            "pint --config vendor/portavice/laravel-pint-config/pint.json --test"
         ],
         "csfix": [
-            "phpcbf"
+            "pint --config vendor/portavice/laravel-pint-config/pint.json"
         ],
         "test": [
             "phpunit"
